implements security with tokens client
