# routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\FileController;
 
 /*
@@ -15,5 +16,7 @@ use App\Http\Controllers\FileController;
 |
 */
 
-Route::apiResource('files', 'FileController');
-Route::post('/files/{file}', [FileController::class, 'update']);
+Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:api');
+Route::get('/me', [AuthController::class, 'user'])->middleware('auth:api');
+Route::apiResource('files', 'FileController')->middleware('auth:api');
+Route::post('/files/{file}', [FileController::class, 'update'])->middleware('auth:api');
